fixup! fix: Build script

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@
   
         - name: Cross compile remote-os v0.x
           id: cross-compile
-          uses: zehnm/yio-crosscompile-action@1.1.0
+          uses: zehnm/yio-crosscompile-action@v1.1.0
           with:
             project-name: ${{ env.PROJECT_NAME }}
             output-path: ${GITHUB_WORKSPACE}/binaries/app
