--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,9 @@
         matrix:
           config:
           - {
-              name: "RPi0 Release Build", artifact: "RPi0-release",
-              qmake-args: "CONFIG+=release"
-            }
-          - {
-              name: "RPi0 Debug Build", artifact: "RPi0-debug",
-              qmake-args: "CONFIG+=debug CONFIG+=qml_debug"
+              name: "remote-os v0.x Build", artifact: "${{ env.APP_ARCHITECTURE }}-release",
+              qmake-args: "CONFIG+=release",
+              crosscompile-action: "zehnm/yio-crosscompile-action@v1.1.0"
             }
   
       steps:
@@ -54,9 +51,8 @@
         - name: Set build timestamp
           run: echo "::set-env name=TIMESTAMP::$(date +"%Y%m%d_%H%M%S")"
   
-        - name: Cross compile remote-os v0.x
-          id: cross-compile
-          uses: zehnm/yio-crosscompile-action@v1.1.0
+        - name: Cross compile
+          uses: ${{ matrix.config.crosscompile-action }}
           with:
             project-name: ${{ env.PROJECT_NAME }}
             output-path: ${GITHUB_WORKSPACE}/binaries/app
@@ -81,11 +77,11 @@
           with:
             name: ${{ env.APP_NAME }}-${{ env.APP_ARCHITECTURE }}-release
             path: ./release
-        - name: Download debug artifact
-          uses: actions/download-artifact@v1
-          with:
-            name: ${{ env.APP_NAME }}-${{ env.APP_ARCHITECTURE }}-debug
-            path: ./debug
+        #- name: Download debug artifact
+        #  uses: actions/download-artifact@v1
+        #  with:
+        #    name: ${{ env.APP_NAME }}-${{ env.APP_ARCHITECTURE }}-debug
+        #    path: ./debug
         - name: Get artifact version
           run: |
             read -r APP_VERSION < release/version.txt
@@ -95,7 +91,7 @@
         - name: Create GitHub development build archives
           if: "!contains(github.ref, 'tags/v')"
           run: |
-            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.TIMESTAMP }}-${{ env.APP_ARCHITECTURE }}-debug.tar -C debug .
+            # tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.TIMESTAMP }}-${{ env.APP_ARCHITECTURE }}-debug.tar -C debug .
             tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.TIMESTAMP }}-${{ env.APP_ARCHITECTURE }}-release.tar -C release .
             for filename in *.tar; do echo "sha256  `sha256sum $filename`" >> ${{ env.HASH_FILENAME }}; done;
 
@@ -114,7 +110,7 @@
         - name: Create GitHub release archives
           if: "contains(github.ref, 'tags/v')"
           run: |
-            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.APP_ARCHITECTURE }}-debug.tar -C debug .
+            # tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.APP_ARCHITECTURE }}-debug.tar -C debug .
             tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.APP_ARCHITECTURE }}-release.tar -C release .
             for filename in *.tar; do echo "sha256  `sha256sum $filename`" >> ${{ env.HASH_FILENAME }}; done;
 
