--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,7 @@
           run: echo "::set-env name=TIMESTAMP::$(date +"%Y%m%d_%H%M%S")"
   
         - name: Cross compile
+          id: cross-compile
           uses: ${{ matrix.config.crosscompile-action }}
           with:
             project-name: ${{ env.PROJECT_NAME }}
