--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,8 @@
   env:
     APP_NAME: YIO-remote-software
     APP_ARCHITECTURE: RPi0
+    APP_SUFFIX1: release
+    APP_SUFFIX2: Qt5.12.8
     PROJECT_NAME: remote-software
     HASH_FILENAME: yio-remote-software.hash
 
@@ -28,18 +30,12 @@
                 build-image: "zehnm/yio-crosscompile-action:1.1.0"
               }
             - {
-              name: "remote-os v1.x Build", artifact: "RPi0-Qt5.12.8",
-              qmake-args: "CONFIG+=release",
-              build-image: "zehnm/yio-crosscompile-action:2.0.0"
-            }
+                name: "remote-os v1.x Build", artifact: "RPi0-Qt5.12.8",
+                qmake-args: "CONFIG+=release",
+                build-image: "zehnm/yio-crosscompile-action:2.0.0"
+              }
   
-      steps:
-        - name: github env vars
-          run: |
-            echo "$GITHUB_REF"
-            echo "$GITHUB_HEAD_REF"
-            echo "$GITHUB_BASE_REF"
-  
+      steps:  
         - name: Checkout ${{ env.PROJECT_NAME}}
           uses: actions/checkout@v2
           with:
@@ -52,9 +48,6 @@
             cd ${{ env.PROJECT_NAME}}
             git fetch origin +refs/tags/*:refs/tags/*
             git describe --match "v[0-9]*" --tags HEAD --always
-  
-        - name: Set build timestamp
-          run: echo "::set-env name=TIMESTAMP::$(date +"%Y%m%d_%H%M%S")"
   
         # - name: Cross compile
         #   id: cross-compile
@@ -71,8 +64,8 @@
               docker pull ${{ matrix.config.build-image }}
               docker run --workdir /github/workspace --rm  \
                   -e GITHUB_WORKSPACE=/github/workspace \
-                  -v "/home/runner/work/remote-software/remote-software":"/github/workspace" \
-                  ${{ matrix.config.build-image }}  "remote-software" "/github/workspace/binaries/app" "CONFIG+=release" "https://github.com/YIO-Remote/integrations.library.git" "."
+                  -v /home/runner/work/remote-software/remote-software:/github/workspace \
+                  ${{ matrix.config.build-image }} remote-software /github/workspace/binaries/app ${{ matrix.config.qmake-args }} https://github.com/YIO-Remote/integrations.library.git .
 
         - name: Upload build artefacts
           uses: actions/upload-artifact@v1
@@ -87,28 +80,23 @@
       needs: build
 
       steps:
-        - run: mkdir release debug
-        - name: Download release artifact
-          uses: actions/download-artifact@v1
-          with:
-            name: ${{ env.APP_NAME }}-${{ env.APP_ARCHITECTURE }}-release
-            path: ./release
-        #- name: Download debug artifact
-        #  uses: actions/download-artifact@v1
-        #  with:
-        #    name: ${{ env.APP_NAME }}-${{ env.APP_ARCHITECTURE }}-debug
-        #    path: ./debug
+        - name: Download build artifacts
+          uses: actions/download-artifact@v2
+
+        - name: Display structure of downloaded files
+          run: ls -R
+  
         - name: Get artifact version
           run: |
-            read -r APP_VERSION < release/version.txt
+            read -r APP_VERSION < ${{ env.APP_NAME }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX1 }}/version.txt
             echo "::set-env name=APP_VERSION::$APP_VERSION"
             echo "::set-env name=TIMESTAMP::$(date +"%Y%m%d_%H%M%S")"
 
         - name: Create GitHub development build archives
           if: "!contains(github.ref, 'tags/v')"
           run: |
-            # tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.TIMESTAMP }}-${{ env.APP_ARCHITECTURE }}-debug.tar -C debug .
-            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.TIMESTAMP }}-${{ env.APP_ARCHITECTURE }}-release.tar -C release .
+            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.TIMESTAMP }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX2 }}.tar -C ${{ env.APP_NAME }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX2 }} .
+            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.TIMESTAMP }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX1 }}.tar -C ${{ env.APP_NAME }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX1 }} .
             for filename in *.tar; do echo "sha256  `sha256sum $filename`" >> ${{ env.HASH_FILENAME }}; done;
 
         - name: Create Pre-Release ${{ env.APP_VERSION }}
@@ -126,8 +114,8 @@
         - name: Create GitHub release archives
           if: "contains(github.ref, 'tags/v')"
           run: |
-            # tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.APP_ARCHITECTURE }}-debug.tar -C debug .
-            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.APP_ARCHITECTURE }}-release.tar -C release .
+            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX2 }}.tar -C ${{ env.APP_NAME }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX2 }} .
+            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX1 }}.tar -C ${{ env.APP_NAME }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX1 }} .
             for filename in *.tar; do echo "sha256  `sha256sum $filename`" >> ${{ env.HASH_FILENAME }}; done;
 
         - name: Create Release ${{ env.APP_VERSION }}
