--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,8 @@
 
   env:
     APP_NAME: YIO-remote-software
-    APP_ARCHITECTURE: RPi0
-    APP_SUFFIX1: release
-    APP_SUFFIX2: Qt5.12.8
+    APP_SUFFIX1: RPi0-release
+    APP_SUFFIX2: RPi0-Qt5.12.8
     PROJECT_NAME: remote-software
     HASH_FILENAME: yio-remote-software.hash
 
@@ -25,12 +24,12 @@
         matrix:
           config:
             - {
-                name: "remote-os v0.x Build", artifact: "RPi0-release",
+                name: "remote-os v0.x Build", artifact: ${{ env.APP_SUFFIX1 }},
                 qmake-args: "CONFIG+=release",
                 build-image: "zehnm/yio-crosscompile-action:1.1.0"
               }
             - {
-                name: "remote-os v1.x Build", artifact: "RPi0-Qt5.12.8",
+                name: "remote-os v1.x Build", artifact: ${{ env.APP_SUFFIX2 }},
                 qmake-args: "CONFIG+=release",
                 build-image: "zehnm/yio-crosscompile-action:2.0.0"
               }
@@ -67,6 +66,9 @@
                   -v /home/runner/work/remote-software/remote-software:/github/workspace \
                   ${{ matrix.config.build-image }} remote-software /github/workspace/binaries/app ${{ matrix.config.qmake-args }} https://github.com/YIO-Remote/integrations.library.git .
 
+        - name: Display build artefacts
+          run: ls -R binaries
+
         - name: Upload build artefacts
           uses: actions/upload-artifact@v1
           with:
@@ -88,15 +90,15 @@
   
         - name: Get artifact version
           run: |
-            read -r APP_VERSION < ${{ env.APP_NAME }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX1 }}/version.txt
+            read -r APP_VERSION < ${{ env.APP_NAME }}-${{ env.APP_SUFFIX1 }}/version.txt
             echo "::set-env name=APP_VERSION::$APP_VERSION"
             echo "::set-env name=TIMESTAMP::$(date +"%Y%m%d_%H%M%S")"
 
         - name: Create GitHub development build archives
           if: "!contains(github.ref, 'tags/v')"
           run: |
-            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.TIMESTAMP }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX2 }}.tar -C ${{ env.APP_NAME }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX2 }} .
-            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.TIMESTAMP }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX1 }}.tar -C ${{ env.APP_NAME }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX1 }} .
+            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.TIMESTAMP }}-${{ env.APP_SUFFIX2 }}.tar -C ${{ env.APP_NAME }}-${{ env.APP_SUFFIX2 }} .
+            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.TIMESTAMP }}-${{ env.APP_SUFFIX1 }}.tar -C ${{ env.APP_NAME }}-${{ env.APP_SUFFIX1 }} .
             for filename in *.tar; do echo "sha256  `sha256sum $filename`" >> ${{ env.HASH_FILENAME }}; done;
 
         - name: Create Pre-Release ${{ env.APP_VERSION }}
@@ -114,8 +116,8 @@
         - name: Create GitHub release archives
           if: "contains(github.ref, 'tags/v')"
           run: |
-            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX2 }}.tar -C ${{ env.APP_NAME }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX2 }} .
-            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX1 }}.tar -C ${{ env.APP_NAME }}-${{ env.APP_ARCHITECTURE }}-${{ env.APP_SUFFIX1 }} .
+            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.APP_SUFFIX2 }}.tar -C ${{ env.APP_NAME }}-${{ env.APP_SUFFIX2 }} .
+            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.APP_SUFFIX1 }}.tar -C ${{ env.APP_NAME }}-${{ env.APP_SUFFIX1 }} .
             for filename in *.tar; do echo "sha256  `sha256sum $filename`" >> ${{ env.HASH_FILENAME }}; done;
 
         - name: Create Release ${{ env.APP_VERSION }}
