--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,6 @@
 
   env:
     APP_NAME: YIO-remote-software
-    APP_SUFFIX1: RPi0-release
-    APP_SUFFIX2: RPi0-Qt5.12.8
     PROJECT_NAME: remote-software
     HASH_FILENAME: yio-remote-software.hash
 
@@ -24,12 +22,12 @@
         matrix:
           config:
           - {
-              name: "remote-os v0.x Build", artifact: "${{ env.APP_SUFFIX1 }}",
+              name: "remote-os v0.x Build", artifact: "RPi0-release",
               qmake-args: "CONFIG+=release",
               build-image: "zehnm/yio-crosscompile-action:1.1.0"
             }
           - {
-              name: "remote-os v1.x Build", artifact: "${{ env.APP_SUFFIX2 }}",
+              name: "remote-os v1.x Build", artifact: "RPi0-Qt5.12.8",
               qmake-args: "CONFIG+=release",
               build-image: "zehnm/yio-crosscompile-action:2.0.0"
             }
@@ -69,11 +67,17 @@
         - name: Display build artefacts
           run: ls -R binaries
 
+        - name: Get artifact version
+          run: |
+            read -r APP_VERSION < binaries/version.txt
+            echo "::set-env name=APP_VERSION::$APP_VERSION"
+            echo "::set-env name=TIMESTAMP::$(date +"%Y%m%d_%H%M%S")"
+
         - name: Upload build artefacts
           uses: actions/upload-artifact@v1
           with:
             path: binaries
-            name: ${{ env.APP_NAME }}-${{ matrix.config.artifact }}
+            name: ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ matrix.config.artifact }}
 
     release:
       name: Create Release
@@ -88,27 +92,20 @@
         - name: Display structure of downloaded files
           run: ls -R
   
-        - name: Get artifact version
-          run: |
-            read -r APP_VERSION < ${{ env.APP_NAME }}-${{ env.APP_SUFFIX1 }}/version.txt
-            echo "::set-env name=APP_VERSION::$APP_VERSION"
-            echo "::set-env name=TIMESTAMP::$(date +"%Y%m%d_%H%M%S")"
-
         - name: Create GitHub development build archives
           if: "!contains(github.ref, 'tags/v')"
           run: |
-            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.TIMESTAMP }}-${{ env.APP_SUFFIX2 }}.tar -C ${{ env.APP_NAME }}-${{ env.APP_SUFFIX2 }} .
-            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.TIMESTAMP }}-${{ env.APP_SUFFIX1 }}.tar -C ${{ env.APP_NAME }}-${{ env.APP_SUFFIX1 }} .
+            for D in *; do if [ -d "${D}" ]; then tar cvf $D-${{ env.TIMESTAMP }}.tar -C $D .; fi; done;
             for filename in *.tar; do echo "sha256  `sha256sum $filename`" >> ${{ env.HASH_FILENAME }}; done;
 
-        - name: Create Pre-Release ${{ env.APP_VERSION }}
+        - name: Create Pre-Release
           uses: "marvinpinto/action-automatic-releases@latest"
           if: "!contains(github.ref, 'tags/v')"
           with:
             repo_token: "${{ secrets.GITHUB_TOKEN }}"
             automatic_release_tag: "latest"
             prerelease: true
-            title: "Development Build ${{ env.APP_VERSION }}"
+            title: "Development Build"
             files: |
                 *.tar
                 ${{ env.HASH_FILENAME }}
@@ -116,11 +113,10 @@
         - name: Create GitHub release archives
           if: "contains(github.ref, 'tags/v')"
           run: |
-            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.APP_SUFFIX2 }}.tar -C ${{ env.APP_NAME }}-${{ env.APP_SUFFIX2 }} .
-            tar cvf ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ env.APP_SUFFIX1 }}.tar -C ${{ env.APP_NAME }}-${{ env.APP_SUFFIX1 }} .
+            for D in *; do if [ -d "${D}" ]; then tar cvf $D.tar -C $D .; fi; done;
             for filename in *.tar; do echo "sha256  `sha256sum $filename`" >> ${{ env.HASH_FILENAME }}; done;
 
-        - name: Create Release ${{ env.APP_VERSION }}
+        - name: Create Release
           uses: "marvinpinto/action-automatic-releases@latest"
           if: "contains(github.ref, 'tags/v')"
           with:
