--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,14 +64,10 @@
                   -v /home/runner/work/remote-software/remote-software:/github/workspace \
                   ${{ matrix.config.build-image }} remote-software /github/workspace/binaries/app ${{ matrix.config.qmake-args }} https://github.com/YIO-Remote/integrations.library.git .
 
-        - name: Display build artefacts
-          run: ls -R binaries
-
         - name: Get artifact version
           run: |
             read -r APP_VERSION < binaries/version.txt
             echo "::set-env name=APP_VERSION::$APP_VERSION"
-            echo "::set-env name=TIMESTAMP::$(date +"%Y%m%d_%H%M%S")"
 
         - name: Upload build artefacts
           uses: actions/upload-artifact@v1
@@ -91,7 +87,11 @@
 
         - name: Display structure of downloaded files
           run: ls -R
-  
+
+        - name: Get timestamp
+          run: |
+            echo "::set-env name=TIMESTAMP::$(date +"%Y%m%d_%H%M%S")"
+ 
         - name: Create GitHub development build archives
           if: "!contains(github.ref, 'tags/v')"
           run: |
