--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,11 +42,13 @@
             path: ${{ env.PROJECT_NAME}}
 
         - name: Fetch all tags to determine version
+          # Used in cross compile step
           run: |
             cd ${{ env.PROJECT_NAME}}
             git fetch origin +refs/tags/*:refs/tags/*
             git describe --match "v[0-9]*" --tags HEAD --always
   
+        # Unfortunately we can't use a dynamic Action as in "uses: ${{ matrix.config.build-image }}" 
         # - name: Cross compile
         #   id: cross-compile
         #   uses: zehnm/yio-crosscompile-action@2.0.0
@@ -54,9 +56,8 @@
         #     project-name: ${{ env.PROJECT_NAME }}
         #     output-path: ${GITHUB_WORKSPACE}/binaries/app
         #     qmake-args: ${{ matrix.config.qmake-args }}
-
-        # Unfortunately we can't use a dynamic Action as in "uses: ${{ matrix.config.build-image }}" 
-        # So let's try doing it manually :-( Maybe one day we'll get that feature from GitHub
+        #
+        # So let's do it manually :-( Maybe one day we'll get that feature from GitHub...
         - name: Cross compile
           run: |
               docker pull ${{ matrix.config.build-image }}
@@ -71,10 +72,11 @@
             echo "::set-env name=APP_VERSION::$APP_VERSION"
 
         - name: Upload build artefacts
-          uses: actions/upload-artifact@v1
+          uses: actions/upload-artifact@v2
           with:
             path: binaries
             name: ${{ env.APP_NAME }}-v${{ env.APP_VERSION }}-${{ matrix.config.artifact }}
+            if-no-files-found: error
 
     release:
       name: Create Release
