--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -35,11 +35,19 @@ jobs:
         # We must fetch at least the immediate parents so that if this is
         # a pull request then we can checkout the head.
         fetch-depth: 2
+        path: remote-software
+
+    - name: Checkout integrations.library
+      uses: actions/checkout@v2
+      with:
+        repository: YIO-Remote/integrations.library
+        path: integrations.library
 
     # If this run was triggered by a pull request event, then checkout
     # the head of the pull request instead of the merge commit.
     - run: git checkout HEAD^2
       if: ${{ github.event_name == 'pull_request' }}
+      working-directory: remote-software
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
@@ -74,3 +82,5 @@ jobs:
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
+      with:
+        checkout_path: ${{ github.workspace }}/remote-software
