--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -64,6 +64,11 @@ jobs:
       with:
         modules: qtvirtualkeyboard, qtnetworkauth
 
+    - name: Install system libs
+      if: runner.os == 'Linux'
+      run: |
+        sudo apt install libavahi-client-dev libgl1-mesa-dev g++-8 libstdc++-8-dev
+
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
     #- name: Autobuild
