--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -35,19 +35,17 @@ jobs:
         # We must fetch at least the immediate parents so that if this is
         # a pull request then we can checkout the head.
         fetch-depth: 2
-        path: remote-software
 
     - name: Checkout integrations.library
       uses: actions/checkout@v2
       with:
         repository: YIO-Remote/integrations.library
-        path: integrations.library
+        path: ../integrations.library
 
     # If this run was triggered by a pull request event, then checkout
     # the head of the pull request instead of the merge commit.
     - run: git checkout HEAD^2
       if: ${{ github.event_name == 'pull_request' }}
-      working-directory: remote-software
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
@@ -59,10 +57,18 @@ jobs:
         # Prefix the list here with "+" to use these queries and those in the config file.
         # queries: ./path/to/local/query, your-org/your-repo/queries@main
 
+    - name: Cache Qt
+      id: cache-qt
+      uses: actions/cache@v1
+      with:
+        path: ../Qt
+        key: ${{ runner.os }}-QtCache
+
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
       with:
         modules: qtvirtualkeyboard, qtnetworkauth
+        cached: ${{ steps.cache-qt.outputs.cache-hit }}
 
     - name: Install system libs
       if: runner.os == 'Linux'
@@ -71,8 +77,8 @@ jobs:
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
-    #- name: Autobuild
-    #  uses: github/codeql-action/autobuild@v1
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v1
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
@@ -81,12 +87,12 @@ jobs:
     #    and modify them (or add more) to build your code if your project
     #    uses a compiled language
 
-    - run: |
-        qmake
-        make -j 3
-      working-directory: remote-software
+    #- run: |
+    #    qmake
+    #    make -j 3
+    #  working-directory: remote-software
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
-      with:
-        checkout_path: ${{ github.workspace }}/remote-software
+      #with:
+      #  checkout_path: ${{ github.workspace }}/remote-software
